programming(8): initial refactor